fixed build errors

--- a/src/app/features/header/header.component.html
+++ b/src/app/features/header/header.component.html
@@ -2,8 +2,8 @@
 <header>
     <div class="header-section">
         <div class="col-auto page-logo">
-            <img tabindex="0" (click)="redirect('')" src="./assets/images/1Tab.png" [attr.aria-label]="1-tab"
-                alt="1-tab" class="im-cursor-default" role="img" />
+            <img tabindex="0" (click)="redirect('')" src="./assets/images/1Tab.png" [attr.aria-label]="'1-tab'"
+                alt="'1-tab'" class="im-cursor-default" role="img" />
         </div>
         <div class="col-auto page-description">
             Inventory Manager
