--- a/src/app/features/medicine-list/medicine-list.component.html
+++ b/src/app/features/medicine-list/medicine-list.component.html
@@ -26,7 +26,6 @@
 </div>
 <!-- data grid -->
 <div>
-    <ag-grid-angular #agGrid class="ag-theme-balham" [rowData]="listData" [columnDefs]="columnDefs"
-        [rowSelection]="single">
+    <ag-grid-angular #agGrid class="ag-theme-balham" [rowData]="listData" [columnDefs]="columnDefs">
     </ag-grid-angular>
 </div>
